<?xml version="1.0"?>
<package format="2">
  <name>mobile_message_generation_artifacts_core</name>
  <version>0.4.1</version>
  <description>Message generation for rosmobile.</description>

  <author>Ronaldson Bellande</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>
  <author>Daniel Stonier</author>
  <author>Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosmobile_build_tools</build_depend>
  <build_depend>genmobile</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend> <!-- ros/ros_comm_msgs -->
  <build_depend>std_srvs</build_depend>
  <build_depend>rosmobile_test_msgs</build_depend> <!--  rosmobile/rosmobile_test_msgs -->
  <build_depend>actionlib_msgs</build_depend> <!--  ros/common_msgs -->
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend> <!-- geometry_experimental/tf2_msgs -->
  <build_depend>ar_track_alvar_msgs</build_depend> <!-- sniekum/ar_track_alvar_msgs -->
  <build_depend>uuid_msgs</build_depend> <!-- ros-geographic-info/unique_identifier -->
  <build_depend>yocs_msgs</build_depend> <!-- yujinrobot/yocs_msgs -->
  <build_depend>concert_msgs</build_depend> <!-- robotics-in-concert/rocon_msgs -->
  <build_depend>concert_service_msgs</build_depend>
  <build_depend>gateway_msgs</build_depend>
  <build_depend>rocon_app_manager_msgs</build_depend>
  <build_depend>rocon_device_msgs</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <build_depend>rocon_service_pair_msgs</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>rocon_tutorial_msgs</build_depend>
  <build_depend>scheduler_msgs</build_depend>
  <build_depend>world_canvas_msgs</build_depend>
  <build_depend>map_store</build_depend> <!-- ros-planning/map_store -->
  <build_depend>move_base_msgs</build_depend> <!-- ros-planning/navigation -->
  <build_depend>roscpp</build_depend> <!-- ros-planning/navigation -->

  <build_export_depend>rosmobile_build_tools</build_export_depend>
  <build_export_depend>genmobile</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend> <!--  ros/ros_comm_msgs -->
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>rosmobile_test_msgs</build_export_depend> <!--  rosmobile/rosmobile_test_msgs -->
  <build_export_depend>actionlib_msgs</build_export_depend> <!--  ros/common_msgs -->
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>shape_msgs</build_export_depend>
  <build_export_depend>stereo_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend> <!--  geometry_experimental/tf2_msgs -->
  <build_export_depend>ar_track_alvar_msgs</build_export_depend> <!--  sniekum/ar_track_alvar_msgs -->
  <build_export_depend>uuid_msgs</build_export_depend> <!--  ros-geographic-info/unique_identifier -->
  <build_export_depend>yocs_msgs</build_export_depend> <!--  yujinrobot/yocs_msgs -->
  <build_export_depend>concert_msgs</build_export_depend> <!--  robotics-in-concert/rocon_msgs -->
  <build_export_depend>concert_service_msgs</build_export_depend>
  <build_export_depend>gateway_msgs</build_export_depend>
  <build_export_depend>rocon_app_manager_msgs</build_export_depend>
  <build_export_depend>rocon_device_msgs</build_export_depend>
  <build_export_depend>rocon_interaction_msgs</build_export_depend>
  <build_export_depend>rocon_service_pair_msgs</build_export_depend>
  <build_export_depend>rocon_std_msgs</build_export_depend>
  <build_export_depend>rocon_tutorial_msgs</build_export_depend>
  <build_export_depend>scheduler_msgs</build_export_depend>
  <build_export_depend>world_canvas_msgs</build_export_depend>
  <build_export_depend>map_store</build_export_depend> <!--  ros-planning/map_store -->
  <build_export_depend>move_base_msgs</build_export_depend> <!--  ros-planning/navigation -->
  <build_export_depend>roscpp</build_export_depend> <!--  ros-planning/navigation -->

  <exec_depend>rosmobile_build_tools</exec_depend>
  <exec_depend>genmobile</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend> <!--  ros/ros_comm_msgs -->
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rosmobile_test_msgs</exec_depend> <!--  rosmobile/rosmobile_test_msgs -->
  <exec_depend>actionlib_msgs</exec_depend> <!--  ros/common_msgs -->
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend> <!--  geometry_experimental/tf2_msgs -->
  <exec_depend>ar_track_alvar_msgs</exec_depend> <!--  sniekum/ar_track_alvar_msgs -->
  <exec_depend>uuid_msgs</exec_depend> <!--  ros-geographic-info/unique_identifier -->
  <exec_depend>yocs_msgs</exec_depend> <!--  yujinrobot/yocs_msgs -->
  <exec_depend>concert_msgs</exec_depend> <!--  robotics-in-concert/rocon_msgs -->
  <exec_depend>concert_service_msgs</exec_depend>
  <exec_depend>gateway_msgs</exec_depend>
  <exec_depend>rocon_app_manager_msgs</exec_depend>
  <exec_depend>rocon_device_msgs</exec_depend>
  <exec_depend>rocon_interaction_msgs</exec_depend>
  <exec_depend>rocon_service_pair_msgs</exec_depend>
  <exec_depend>rocon_std_msgs</exec_depend>
  <exec_depend>rocon_tutorial_msgs</exec_depend>
  <exec_depend>scheduler_msgs</exec_depend>
  <exec_depend>world_canvas_msgs</exec_depend>
  <exec_depend>map_store</exec_depend> <!--  ros-planning/map_store -->
  <exec_depend>move_base_msgs</exec_depend> <!--  ros-planning/navigation -->
  <exec_depend>roscpp</exec_depend> <!--  ros-planning/navigation -->

</package>
